# git_exercise

./: .gitignore  1.py  README.md  pyproject.toml  q_table.pickle  test_jupyer.ipynb
Kalmanfilter/: helper_utils.py  kalman_filter.py  railtruck_example.py  voltmeter_example.py
ReinforcementLearning/example_gym/: taxi_v2.py
ReinforcementLearning/example_movan/: demoQlearning.py
ReinforcementLearning/q_learning_taxi_v3/: evaluation.py  train.py  utils.py
deep_learning_pytorch/chapter2_PyTorch-Basics/: Tensor-and-Variable.py  one_hot.py
dl_framework/: lesson02.py  lesson02multivector.py  lesson02new.py
dl_model_pytorch/Generative Adversarial Networks (GANs)/: Deep Convolutional GAN.py  Generative Adversarial Networks (GAN).py
dl_model_pytorch/Multilayer Perceptrons/: 1_Multilayer Perceptron.py  2_Multilayer Perceptron with Dropout.py  3_Multilayer Perceptron with BatchNorm.py  4_Multilayer Perceptron From Scratch.py
dl_model_pytorch/Normalization Layers/: 0_BatchNorm before Activation for Network-in-Network CIFAR-10 Classifier.py  (+1 more)
dl_model_tf/VGG/: VGG_16.py
exer_html/: 1_1_first_html.html  1_2_href.html  1_3_href.html  1_4_head.html  1_5_css.html  1_6_img.html  2_1_first_css.html  2_4_outline.html  2_5_margin.html  2_7_grouping_selector.html  2_8_dimension.html  3_1_first_js.html  3_3_outer_script.html  3_4_output.html  3_6_object_js.html
genetic_algo/: FindPath.py  GA_MatchPhrase.py  TravelSalesProblem.py  genetic_algo_basic.py
kaikeba_flow/: train_kaikeba_flow.py
my-vue-project/: package-lock.json  package.json
myfirstapp/: README.md  package-lock.json  package.json  project.config.json
node_js/: first_server.js  package-lock.json
path_plan/: dijkstar_path.py
python_data_visual/: gaussian_test.py  hist.py
python_easy_scrapint/: 1_1_urllib.py  2_1_beautifulsoup_basic.py  2_2_beautifulsoup_css.py
python_tips/: graphviz_dot.py  kaermanfilter.py  python_inner_function.py  simple_long_img.py  sparse_dense_matric.py  test_argparse.py
pytorch_tutorial/: 3_1_regression.py  3_2_classification.py  3_3_build_nn_quickly.py  3_5_batch_train.py  3_6_optimizer.py  4_1_CNN.py  4_4_autoencoder.py  activation.py  net.pkl  net_params.pkl  numpy_torch.py  variable.py
shell_learn/: hello.sh
(+152 files in other folders)
