[tool.poetry]
name = "git_exercise"
version = "0.1.0"
description = ""
authors = ["Bin Yu <binyu17812@gmail.com>"]

[[tool.poetry.source]]
name = 'aliyun'
url = 'https://mirrors.aliyun.com/pypi/simple'
default = true

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.18.1"
matplotlib = "^3.1.3"
PyQt5 = "^5.14.1"
dijkstar = "^2.5.0"
jupyter = "^1.0.0"
opencv-python = "4.1.0.25"
opencv-contrib-python = "^4.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
